welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: not found: value &&
			case (a<b && b<c) => return true;
                                  ^inOrderEqual:9: error: not found: value &&
			case (a≤b && b≤c) => return true;
                                  ^inOrderEqual:10: error: not found: value -
			case - => return false;
                             ^